fix: add meta description to documentation pages

--- a/src/pages/docs/filters.mdx
+++ b/src/pages/docs/filters.mdx
@@ -3,6 +3,7 @@ layout: ../../layouts/Docs.astro
 title: Filter conditions
 slug: filters
 icon: filter
+description: Learn how to use filter conditions to query data from your Google Sheets using HolySheets.
 ---
 
 # Filter conditions
