--- a/src/pages/docs/getting-credentials.mdx
+++ b/src/pages/docs/getting-credentials.mdx
@@ -3,6 +3,7 @@ layout: ../../layouts/Docs.astro
 title: Getting Credentials
 slug: getting-credentials
 icon: contract
+description: Learn how to get Google credentials for your project to use with HolySheets.
 ---
 
 # Getting Google Credentials
