--- a/src/pages/docs/index.mdx
+++ b/src/pages/docs/index.mdx
@@ -3,6 +3,7 @@ layout: ../../layouts/Docs.astro
 title: Introduction
 slug: introduction
 icon: book
+description: Learn about HolySheets! and how it simplifies the process of interacting with the Google Sheets API.
 ---
 
 # Introduction
