--- a/src/pages/docs/note.mdx
+++ b/src/pages/docs/note.mdx
@@ -3,6 +3,7 @@ layout: ../../layouts/Docs.astro
 title: Note
 slug: note
 icon: note
+description: Learn about the limitations of HolySheets! and when to use it.
 ---
 
 # Note
