chore: use correct name for project

--- a/src/pages/docs/api.mdx
+++ b/src/pages/docs/api.mdx
@@ -3,7 +3,7 @@ layout: ../../layouts/Docs.astro
 title: API
 slug: api
 icon: code
-description: Learn how to use the HolySheets API to interact with your Google Sheets data.
+description: Learn how to use the Holysheets!API to interact with your Google Sheets data.
 ---
 
 # API documentation
