--- a/src/pages/docs/filters.mdx
+++ b/src/pages/docs/filters.mdx
@@ -3,12 +3,12 @@ layout: ../../layouts/Docs.astro
 title: Filter conditions
 slug: filters
 icon: filter
-description: Learn how to use filter conditions to query data from your Google Sheets using HolySheets.
+description: Learn how to use filter conditions to query data from your Google Sheets using Holysheets!
 ---
 
 # Filter conditions
 
-`HolySheets!` provides a variety of filter conditions to help you query data from your Google Sheets. These filters allow you to specify criteria for selecting rows based on the values in their columns.
+`Holysheets!` provides a variety of filter conditions to help you query data from your Google Sheets. These filters allow you to specify criteria for selecting rows based on the values in their columns.
 
 ### equals
 
