--- a/src/pages/docs/index.mdx
+++ b/src/pages/docs/index.mdx
@@ -3,16 +3,16 @@ layout: ../../layouts/Docs.astro
 title: Introduction
 slug: introduction
 icon: book
-description: Learn about HolySheets! and how it simplifies the process of interacting with the Google Sheets API.
+description: Learn about Holysheets! and how it simplifies the process of interacting with the Google Sheets API.
 ---
 
 # Introduction
 
-**HolySheets!** is a TypeScript library that simplifies the process of interacting with the Google Sheets API. It offers a set of tools for reading and writing data to and from Google Sheets, with a Prisma-like syntax.
+**Holysheets!** is a TypeScript library that simplifies the process of interacting with the Google Sheets API. It offers a set of tools for reading and writing data to and from Google Sheets, with a Prisma-like syntax.
 
 ## Advantages
 
-**No more memorizing range codes**: With HolySheets!, you don't need to remember complex range codes. The library handles all the range-related operations for you, allowing you to focus on your data.
+**No more memorizing range codes**: With Holysheets!, you don't need to remember complex range codes. The library handles all the range-related operations for you, allowing you to focus on your data.
 
 ## Features
 
@@ -23,7 +23,7 @@ description: Learn about HolySheets! and how it simplifies the process of intera
 
 ## Installation
 
-You can install **HolySheets!** using npm:
+You can install **Holysheets!** using npm:
 
 ```
 npm install holysheets
