--- a/src/pages/docs/note.mdx
+++ b/src/pages/docs/note.mdx
@@ -3,9 +3,9 @@ layout: ../../layouts/Docs.astro
 title: Note
 slug: note
 icon: note
-description: Learn about the limitations of HolySheets! and when to use it.
+description: Learn about the limitations of Holysheets! and when to use it.
 ---
 
 # Note
 
-While `HolySheets!` provides a simplified interface for managing Google Sheets data, it is not intended to replace a dedicated database system. Please consider the specific needs and requirements of your project when deciding whether to use `HolySheets!`.
+While `Holysheets!` provides a simplified interface for managing Google Sheets data, it is not intended to replace a dedicated database system. Please consider the specific needs and requirements of your project when deciding whether to use `Holysheets!`.
